# Egregoria

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  index.html  package.sh  rustfmt.toml
assets_gui/: Cargo.toml
assets_gui/src/: companies.rs  gui.rs  lod.rs  main.rs  orbit_camera.rs  yakui_gui.rs
common/: Cargo.toml  build.rs
common/src/: chunkid.rs  config.rs  descriptions.rs  error.rs  hash.rs  history.rs  inspect.rs  iter.rs  lib.rs  logger.rs  macros.rs  rand.rs  saveload.rs  scroll.rs  time.rs  timestep.rs  z.rs
egregoria/: Cargo.toml  build.rs
egregoria/src/: api.rs  engine_interaction.rs  frame_log.rs  init.rs  lib.rs  par_command_buffer.rs  saveload.rs  scheduler.rs  utils.rs  world.rs
egregoria/src/economy/: ecostats.rs  goods.rs  government.rs  item.rs  jobs.rs  market.rs  mod.rs
egregoria/src/gui/: inspect.rs  mod.rs
egregoria/src/interaction/: bulldozer.rs  inspected_aura.rs  mod.rs  movable.rs  roadbuild.rs  roadeditor.rs  selectable.rs
egregoria/src/lua/: mod.rs  scenario_runner.rs
egregoria/src/map/: change_detection.rs  light_policy.rs  map.rs  mod.rs  pathfinding.rs  serializing.rs  spatial_map.rs  terrain.rs  traversable.rs  turn_policy.rs
egregoria/src/map_dynamic/: add_trees.rs  binfos.rs  dispatch.rs  house_assignment.rs  itinerary.rs  mod.rs  parking.rs  router.rs
egregoria/src/map_interaction/: itinerary.rs  parking.rs
egregoria/src/pedestrians/: data.rs  mod.rs  systems.rs
egregoria/src/physics/: kinematics.rs  mod.rs  systems.rs  transform.rs
egregoria/src/rendering/: assets.rs  colors.rs  immediate.rs  meshrender_component.rs  mod.rs
egregoria/src/scenarios/: mod.rs  scenario_runner.rs
egregoria/src/souls/: farm.rs  freight_station.rs  fret_station.rs  goods_company.rs  human.rs  mod.rs  names.txt  simple_producer.rs  supermarket.rs
egregoria/src/tests/: mod.rs  test_iso.rs  vehicles.rs
egregoria/src/transportation/: mod.rs  pedestrian.rs  road.rs  train.rs  vehicle.rs
egregoria/src/utils/: config.rs  frame_log.rs  mod.rs  par_command_buffer.rs  rand_provider.rs  replay.rs  resources.rs  saveload.rs  scheduler.rs  time.rs
egregoria/src/vehicles/: data.rs  mod.rs  railvehicle.rs  saveload.rs  systems.rs  trains.rs
egui-inspect/: Cargo.toml
egui-inspect-derive/: Cargo.toml
egui-inspect-derive/src/: lib.rs
egui-inspect-derive/src/inspect_macro/: mod.rs
egui-inspect/src/: lib.rs
engine/: Cargo.toml
engine/src/: audio.rs  background.rs  egui.rs  fog.rs  framework.rs  game_loop.rs  gfx.rs  input.rs  lamplights.rs  lib.rs  main.rs  material.rs  meshbuild.rs  meshload.rs  pbr.rs  pbuffer.rs  perf_counters.rs  pipeline_builder.rs  pipelines.rs  resources.rs  shader.rs  ssao.rs  texture.rs  u8slice.rs  uniform.rs  vertex_types.rs  yakui.rs
engine_demo/: Cargo.toml
engine_demo/src/: helmet.rs  main.rs  spheres.rs  terrain.rs
flat_spatial/: Cargo.toml
flat_spatial/src/: cell.rs  grid.rs  lib.rs  shapegrid.rs  storage.rs
geom/: Cargo.toml
geom/src/: aabb.rs  aabb3.rs  angle.rs  boldline.rs  boldspline.rs  camera.rs  camera_2d.rs  circle.rs  color.rs  frustrum.rs  heightmap.rs  infinite_frustrum.rs  intersections.rs  lib.rs  line.rs  line3.rs  matrix4.rs  noise.rs  obb.rs  perp_camera.rs  plane.rs  polygon.rs  polyline.rs  polyline3.rs  polyline3queue.rs  quaternion.rs  ray.rs  ray3.rs  rect.rs  segment.rs  segment3.rs  skeleton.rs  sphere.rs  spline.rs  spline1.rs  spline3.rs  splines.rs  transform.rs  v2.rs  v3.rs  (+2 more)
ggez-renderer/: Cargo.toml
ggez-renderer/src/: game_loop.rs  main.rs
goria_version/: Cargo.toml  build.rs
goria_version/src/: lib.rs
goryak/: Cargo.toml
goryak/src/: blur_bg.rs  combo_box.rs  constrained_viewport.rs  count_grid.rs  decoration.rs  divider.rs  dragvalue.rs  hovered.rs  icon.rs  imagebutton.rs  interact_box.rs  layout.rs  lib.rs  link.rs  material-theme.json  pivot.rs  progress_bar.rs  roundrect.rs  scroll.rs  selectable_label.rs  sized_canvas.rs  text.rs  theme.rs  tooltip.rs  util.rs  window.rs
gui/: Cargo.toml
gui/src/: bulldozer.rs  follow.rs  inspect.rs  inspected_aura.rs  lib.rs  movable.rs  roadbuild.rs  roadeditor.rs  selectable.rs  topgui.rs
headless/: Cargo.toml
headless-cli/: Cargo.toml
headless-cli/src/: main.rs
headless/src/: main.rs
imgui-inspect/: Cargo.toml
imgui-inspect-derive/: Cargo.toml
imgui-inspect-derive/src/: lib.rs
imgui-inspect/src/: lib.rs
map_model/: Cargo.toml
map_model/src/: building.rs  heightmap.rs  house.rs  housing.rs  intersection.rs  lane.rs  lib.rs  light_policy.rs  lot.rs  map.rs  mapgen.rs  parking.rs  pathfinding.rs  road.rs  saveload.rs  serializing.rs  spatial_map.rs  terrain.rs  traffic_control.rs  traversable.rs  turn.rs  turn_policy.rs  workplace.rs
mods/: Cargo.toml
mods/src/: lib.rs  stdlib.rs
native_app/: Cargo.toml
native_app/src/: audio.rs  context.rs  debug.rs  game_loop.rs  init.rs  input.rs  inputmap.rs  logger.rs  main.rs  network.rs  timestep.rs  uiworld.rs
networking/: Cargo.toml
networking/examples/: example.rs
networking/src/: authent.rs  catchup.rs  connection_client.rs  connections.rs  lib.rs  packets.rs  ring.rs  worldsend.rs
prototypes/: Cargo.toml
prototypes/src/: company.rs  item.rs  lib.rs  load.rs  macros.rs  prototype_init.lua  tests.rs  validation.rs
scale/: Cargo.toml
scale/src/: engine_interaction.rs  humans.rs  lib.rs  log.rs  main.rs  rand_provider.rs  utils.rs
simulation/: Cargo.toml  clippy.toml
simulation/src/: engine_interaction.rs  init.rs  lib.rs  rerun.rs  world.rs  world_command.rs
souls/: Cargo.toml
souls/src/: lib.rs
wgpu-renderer/: Cargo.toml
wgpu-renderer/src/: debug.rs  depth.rs  game_loop.rs  main.rs  shader.frag  shader.rs  shader.vert  shader_2.frag  shader_2.vert  surface.rs  vertex.rs
wgpu_engine/: Cargo.toml
wgpu_engine/src/: gfx.rs  lamplights.rs  lib.rs  lighting.rs  material.rs  meshload.rs  objload.rs  pbr.rs  pbuffer.rs  pipelines.rs  shader.rs  texture.rs  u8slice.rs  uniform.rs  vertex_types.rs
wgpu_engine_demo/: Cargo.toml
wgpu_engine_demo/src/: main.rs
(+823 files in other folders)
