[package]
name = "assets_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
geom = { path = "../geom" }
engine = { path = "../engine", features = ["yakui"] }
egui-inspect = { path = "../egui-inspect" }
log = { version = "0.4.11", features = ["max_level_info", "release_max_level_info"] }
inline_tweak = "1.0.8"
egui = { workspace = true }
yakui = { workspace = true }
goryak = { path = "../goryak" }
meshopt = "0.4.1"
prototypes = { path = "../prototypes" }