[package]
name = "common"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode       = "1.3.2"
serde         = "1.0"
serde_json    = "1.0.59"
log           = "0.4.11"
geom          = { path = "../geom" }
imgui-inspect = { path = "../imgui-inspect" }
imgui-inspect-derive = { path = "../imgui-inspect-derive" }
lazy_static   = "1.4.0"
arc-swap      = "1.3.0"
miniz_oxide   = "0.3.7"
fnv           = "1.0.3"
inline_tweak  = {version = "1.0.8"}
log-panics    = { version = "2.0.0", features=["with-backtrace"] }
