[package]
name = "common"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode       = "1.3.2"
serde         = "1.0"
serde_json    = "1.0.59"
log           = "0.4.11"
geom          = { path = "../geom" }
miniz_oxide   = "0.7"
rustc-hash    = "1.1.0"
inline_tweak  = {version = "1.0.8"}
log-panics    = { version = "2.0.0", features=["with-backtrace"] }
egui-inspect  = { path = "../egui-inspect" }
fast-float    = { version = "0.2.0", default-features = false }