[package]
name = "egregoria"
version = "0.1.0"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"

# Yes I have many dependencies.
# Yes, I know it takes a while to compile.
# However, it slows me down, and there's incremental compilation.
# I'll prune some of them when I feel it's worth it.

[dependencies]
ordered-float = { version = "2.7.0", default-features = false }
serde         = { version = "1.0", features = ["derive"] }
log           = "0.4.11"
egui-inspect = { path = "../egui-inspect"}
flat_spatial = { version = "0.5.0", features=["serde"] }
geom          = { path = "../geom" }
common        = { path = "../common" }
slotmap       = { version = "1.0.2", default-features = false, features = ["serde", "unstable"] }
rayon         = "1.5.1"
atomic_refcell = "0.1.6"
hecs         = { version = "0.9.0", features=["column-serialize"] }
resources     = "1.1.0"
profiling     = "1.0.5"
inline_tweak  = "1.0.8"
pathfinding   = "2.2.1"
serde-big-array = "0.4.1"