[package]
name = "egregoria"
version = "0.1.0"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2021"

# Yes I have many dependencies.
# But it's ok, read this: https://wiki.alopex.li/LetsBeRealAboutDependencies
[dependencies]
ordered-float = { workspace = true }
serde         = { version = "1.0", features = ["derive"] }
log           = "0.4.11"
egui-inspect = { path = "../egui-inspect"}
flat_spatial = { workspace = true, features=["serde"] }
geom          = { path = "../geom" }
common        = { path = "../common" }
slotmap       = { version = "1.0.2", default-features = false, features = ["serde", "unstable"] }
rayon         = "1.6"
atomic_refcell = "0.1.6"
hecs         = { workspace = true, features=["column-serialize"] }
resources     = "1.1.0"
profiling     = "1.0.5"
inline_tweak = { version = "1.0.9", features = ["release_tweak"] }
pathfinding   = "4.2.1"
serde-big-array = "0.5.0"
lazy_static   = "1.4.0"
arc-swap      = "1.3.0"

[dev-dependencies]
easybench = "1.1.0"
