[package]
name = "egui-inspect"
version = "0.4.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"
description = "Traits and default implementations for inspecting values with egui."
license = "MIT or Apache-2.0"
readme = "../README.md"
keywords = ["game", "egui"]
categories = ["gui", "visualization"]

[dependencies]
egui = { workspace = true }
geom = { path = "../geom" }
egui-inspect-derive = { path = "../egui-inspect-derive", optional = true }

[features]
default = ["derive"]
derive = ["egui-inspect-derive"]