[package]
name = "engine"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
cgmath = {version = "0.17", features = ["mint", "swizzle"]}
specs = {version = "0.15", features = ["specs-derive", "parallel"]}
gfx_core = "0.9"
gfx_device_gl = "0.16"
ncollide2d = "0.20"
nalgebra = "0.18"
imgui = "0.2.1"
imgui-gfx-renderer = "0.2"
scale = { path = "../scale" }