[package]
name = "engine"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geom          = { path = "../geom" }
common        = { path = "../common" }
ordered-float = { workspace = true }
egui-winit    = { workspace = true, default-features = false }
egui          = { workspace = true }
winit         = { workspace = true }
oddio         = { workspace = true }
derive_more   = { workspace = true }
wgpu          = { version = "0.17.0", default-features = false, features=["wgsl"] }
bytemuck      = "1.7.2"
image         = { version = "0.24.3", default-features = false, features = ["png"] }
log           = "0.4.11"
raw-window-handle = "0.5.0"
gltf          = { version = "1.2.0", default-features=false, features=["import", "utils", "names"] }
itertools     = { version = "0.11.0", default-features = false }
profiling     = { version = "1.0.1", default-features = false  }
rayon         = "1.6"
beul          = "1.0.0"
slotmapd      = "1.0"
smallvec      = "1.10.0"
inline_tweak  = "1.0.8"
egui-wgpu     = { version = "0.23.0" }
cpal          = "0.15.0"
lewton        = "0.10.2"
serde         = { version = "1.0.183", features = ["derive"] }