[package]
name = "engine"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"

#[lib]
#crate-type = ["rlib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geom          = { path = "../geom" }
common        = { path = "../common" }
ordered-float = { workspace = true }
egui          = { workspace = true }
oddio         = { workspace = true }
derive_more   = { workspace = true }
wgpu          = { version = "0.20.1", default-features = false, features=["wgsl"] }
winit         = { version = "0.29.4" }
smol_str      = { version = "0.2.0", features = ["serde"]  }
egui-winit    = { git = "https://github.com/emilk/egui" , default-features = false }
bytemuck      = "1.7.2"
image         = { version = "0.25.1", default-features = false, features = ["png"] }
log           = "0.4.11"
gltf          = { version = "1.2.0", default-features=false, features=["import", "utils", "names", "extensions", "extras"] }
itertools     = { workspace = true }
profiling     = { version = "1.0.1", default-features = false  }
rayon         = "1.6"
beul          = "1.0.0"
slotmapd      = "1.0"
inline_tweak = { version = "1.0.8", features = ["derive"] }
egui-wgpu     = { git = "https://github.com/emilk/egui" }
cpal          = "0.15.0"
lewton        = "0.10.2"
serde         = { version = "1.0.183", features = ["derive"] }

yakui         = { workspace = true, optional = true }
yakui-wgpu    = { workspace = true, optional = true }
yakui-winit   = { workspace = true, optional = true }
lazy_static = "1.4.0"

[features]
yakui = ["dep:yakui", "dep:yakui-wgpu", "dep:yakui-winit"]