[package]
name = "flat_spatial"
version = "0.3.7"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"
keywords = ["algorithms", "spatial", "geometry", "grid", "data-structures"]
description = "Flat spatial partitionning algorithms and data structures"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "graphics", "data-structures", "game-engines"]
exclude = ["img/*"]
repository = "https://github.com/Uriopass/flat_spatial"

[dependencies]
slotmap = { version = "1.0.2", default-features = false, features=["serde"] }
serde   = { version = "1.0", features = ["derive"], optional = true }
fnv           = "1.0.3"
euclid = { version = "0.22.7", optional = true }
parry2d = { version = "0.9.0", optional = true }

[features]
default = []
