[package]
name = "geom"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
fnv           = "1.0.3"
inline_tweak = "1.0.8"
