[package]
name = "geom"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@hotmail.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { workspace = true }
serde         = { version = "1.0", features = ["derive"] }
fnv           = "1.0.3"
inline_tweak  = "1.0.8"
flat_spatial  = { workspace = true }
#mlua          = { workspace = true }