[package]
name = "ggez-renderer"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { path = "../scale" }
imgui-gfx-renderer = "0.3"
imgui = "0.3"
gfx_core = "0.9"
gfx_device_gl = "0.16"
cgmath = {version = "0.17", features = ["mint"]}
ggez = "0.5"