[package]
name = "ggez-renderer"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { path = "../scale" }
imgui-gfx-renderer = "0.3"
imgui = "0.3"
gfx_core = "0.9.2"
gfx_device_gl = "0.16"
gfx = "0.18.2"
cgmath = {git = "https://github.com/rustgd/cgmath", default-features = false, features = ["mint"]}
ggez = {git = "https://github.com/Uriopass/ggez", branch = "patch-2" }