[package]
name = "goryak"
version = "0.1.0"
edition = "2021"
description = "Egregoria's yakui component library"

[dependencies]
yakui-core    = { workspace = true }
yakui-widgets = { workspace = true }
nanoserde     = "0.1.35"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
inline_tweak = { version = "1.1.0", features = ["derive"] }