[package]
name = "gui"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egregoria = { path = "../egregoria" }
geom = { path = "../geom" }
imgui-inspect = { path = "../imgui-inspect" }
map_model = { path = "../map_model" }
legion = "0.3.0"
imgui = "0.4.0"
serde = "1.0.115"