[package]
name = "gui"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egregoria = { path = "../egregoria" }
geom = { path = "../geom" }
imgui-inspect = { path = "../imgui-inspect" }
imgui-inspect-derive = { path = "../imgui-inspect-derive" }
map_model = { path = "../map_model" }
common =  { path = "../common" }
legion = { version = "0.3.0", default-features = false, features = ["codegen", "serialize"] }
imgui = "0.5.0"
serde = "1.0.115"
log = "0.4.11"