[package]
name = "headless-cli"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egregoria = { path = "../egregoria" }
mods = { path = "../mods" }
argh = "0.1.3"
geom = { path = "../geom" }
env_logger = "0.7.1"
log = "0.4.11"

[[bin]]
name = "goria"
path = "src/main.rs"