[package]
name = "headless"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egregoria = { path = "../egregoria" }
networking = { path = "../networking" }
goria_version = { path = "../goria_version" }
common = { path = "../common" }
structopt = "0.3.21"
log = { version = "0.4.11", features=["max_level_debug", "release_max_level_info"] }
