[package]
name = "headless"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulation = { path = "../simulation" }
networking = { path = "../networking" }
common = { path = "../common" }
structopt = "0.3.21"
log = { version = "0.4.11", features = ["max_level_info", "release_max_level_info"] }
