[package]
name = "map_model"
version = "0.1.0"
authors = ["Paris Douady <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.7"
slotmap       = { version = "1.0.2", default-features = false, features = ["serde", "unstable"] }
serde         = { version = "1.0", features = ["derive"] }
imgui-inspect = { path = "../imgui-inspect" }
imgui-inspect-derive = { path = "../imgui-inspect-derive" }
geom          = { path = "../geom" }
rand          = { version = "0.8", default-features = false, features = ["small_rng"] }
pathfinding   = "2.2.1"
common        = { path = "../common" }
flat_spatial  = { path = "../flat_spatial" }
log           = "0.4.11"
inline_tweak = { version = "1.0.8", features=["release_tweak"] }
