[package]
name = "mods"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua          = { version = "0.4.1", features = ["vendored", "lua54"] }
geom          = { path = "../geom" }
lazy_static   = "1.4.0"
rand          = "0.7.3"
log           = "0.4.11"