[package]
name = "mods"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua          = { version = "0.4.1", features = ["vendored", "lua54", "send"] }
geom          = { path = "../geom" }
log           = "0.4.11"