[package]
name = "native_app"
version = "0.4.3"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2021"

[dependencies]
bytemuck      = "1.7.2"
egregoria     = { path = "../egregoria" }
geom          = { path = "../geom" }
wgpu_engine   = { path = "../wgpu_engine" }
common        = { path = "../common" }
networking    = { path = "../networking", optional=true }
egui-inspect  = { path = "../egui-inspect" }
egui          = { workspace = true }
egui_extras   = { workspace = true }
flat_spatial  = { workspace = true }
ordered-float = { workspace = true }
winit         = { workspace = true }
oddio         = { workspace = true }
log           = { version = "0.4.11", features=["max_level_info", "release_max_level_info"] }
inline_tweak  = "1.0.6"
serde         = "1.0"
slotmapd      = { version = "1.0", default-features = false }
atomic_refcell = "0.1.6"
rayon         = "1.6"
profiling     = { version = "1.0.8", default-features = false }
include_dir   = "0.7.2"

[features]
default = []
profile = ["profiling/profile-with-tracy"]
multiplayer = ["networking"]

