[package]
name = "networking"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
message-io = { version = "0.11", default-features = false, features = ["udp", "tcp"] }
serde = "1.0.124"
log = "0.4.14"

[dev-dependencies]
simple_logger = "2.2.0"
