[package]
name = "prototypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common       = { path = "../common" }
geom         = { path = "../geom" }
egui-inspect = { path = "../egui-inspect" }
mlua         = { workspace = true }
slotmapd     = "1.0.10"
serde        = "1.0.195"
thiserror    = "1.0.56"
log = { version = "0.4.20", features = [] }