[package]
name = "scale"
version = "0.1.0"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"

[dependencies]
ordered-float = { version = "1.0.2", features = ["serde"] }
rand = {version = "0.7", default-features = false, features = ["std", "small_rng"]}
rand_distr = "0.2.2"
slotmap = {version = "0.4", default-features = false, features = ["serde"]}
imgui-inspect = { path = "../imgui-inspect" }
imgui-inspect-derive = { path = "../imgui-inspect-derive" }
bincode = "1.2.1"
serde = "1.0"
imgui = "0.3"
specs = {version = "0.16", default-features = false, features = ["shred-derive", "specs-derive", "serde"]}
lazy_static = "1.4.0"
pathfinding = "2.0.4"
flat_spatial = "0.1.2"
mint = "0.5.5"
#const-tweaker = "0.3.1"
