[package]
name = "scale"
version = "0.1.0"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"

# Yes I have many dependencies.
# Yes, I know it takes a while to compile.
# However, it slows me down, and there's incremental compilation.
# I'll prune some of them when I feel it's worth it.

[dependencies]
ordered-float = { version = "1.0.2", features = ["serde"] }
rand = {version = "0.7", default-features = false, features = ["std", "small_rng"]}
rand_distr = "0.2.2"
slotmap = { version = "0.4", default-features = false, features = ["serde"] }
bincode = "1.2.1"
serde = "1.0"
specs = { version = "0.16", default-features = false, features = ["parallel", "shred-derive", "specs-derive", "serde"] }
pathfinding = { git = "https://github.com/samueltardieu/pathfinding" }
flat_spatial = "0.1.4"
mint = "0.5.5"
lazy_static = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
imgui = "0.4"
imgui-inspect = { path = "../imgui-inspect"}
imgui-inspect-derive = { path = "../imgui-inspect-derive" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
imgui-inspect-derive = { path = "../imgui-inspect-derive", default-features = false }