[package]
name = "simulation"
version = "0.1.0"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2021"

# Yes I have many dependencies.
# But it's ok, read this: https://wiki.alopex.li/LetsBeRealAboutDependencies
[dependencies]
ordered-float = { workspace = true }
serde         = { version = "1.0", features = ["derive"] }
log           = "0.4.11"
egui-inspect  = { path = "../egui-inspect"}
flat_spatial  = { workspace = true, features=["serde"] }
geom          = { path = "../geom" }
common        = { path = "../common" }
prototypes    = { path = "../prototypes" }
slotmapd      = { version = "1.0", default-features = false, features = ["serde", "unstable"] }
rayon         = "1.6"
profiling     = { version = "1.0.5", default-features = false }
inline_tweak  = { version = "1.0.9", features = ["release_tweak"] }
pathfinding   = "4.2.1"
serde-big-array = "0.5.0"
lazy_static   = "1.4.0"
arc-swap      = "1.3.0"
derive_more   = { workspace = true }
bitflags      = "2.4.1"
itertools     = { workspace = true }
diff = "0.1.13"
# rerun         = { workspace = true }


[dev-dependencies]
easybench = "1.1.0"
quickcheck = "1.0.3"