[package]
name = "souls"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egregoria = { path = "../egregoria" }
geom = { path = "../geom" }
map_model = { path = "../map_model" }
serde = "1.0.115"
log = "0.4.11"
ordered-float = "2.0.0"
rand = "0.7.3"
slotmap = "0.4.0"
rayon = "1.4.0"